# Einsatzleiter

./: .dockerignore  .gitignore  LICENSE  README.md  db.py  db_helper.py  django_collection.txt  docker-compose.yml  einsatzdb.py  einsatzleiter.py  einsatztagebuch.py  gui.py  login.py  main.py  menu.py  mongodb_helper.py  pyproject.toml  requirements.txt  settings.json  settings.py  sqlite_helper.py
Einsatzleiter/: Dockerfile  entrypoint.sh  requirements.txt  settings.json
Einsatzleiter/mission_log/: admin.py  apps.py  filters.py  forms.py  helper.py  models.py  tables.py  urls.py  views.py
Einsatzleiter/mission_log/migrations/: 0001_initial.py
Einsatzleiter/nginx/: nginx.conf
Einsatzleiter/reports/: mission_report.py  unit_report.py
Einsatzleiter/scripts/: botuser.py  mission.py  new_mission.py
Einsatzleiter/server/: settings.py  urls.py  views.py
Einsatzleiter/server/settings/: __init__.py  base.py  dev.py  prod.py
Einsatzleiter/static/css/: styles.css
Einsatzleiter/templates/: base_generic.html  sample.html
Einsatzleiter/templates/mission_log/: dashboard.html  mission.html  mission_all.html  mission_new.html  (+12 more)
Einsatzleiter/users/: admin.py  forms.py  managers.py  models.py
helper/: __init__.py  connect_database.py  database_mongo.py  database_sqlite.py
scripts/: dashboard.py  einheit.py  einsatztagebuch.py  kraefteuebersicht.py  menu.py  protokoll.py
src/: __init__.py  dashboard.py  database.py  einheit.py  einsatzstelle.py  einsatztagebuch.py  einstellungen.py  eintrag.py  fahrzeuge.py  kraefteuebersicht.py  menu.py  protokoll.py  test_db.py
(+7 files in other folders)
